# PFFM

./: .gitignore  CMakeLists.txt  Dcb2D-ModeII.cpp  LICENSE  README.md  SuiteSparse_setup.txt  build notes.txt  main.cpp  makefile  modeI.h  run.sh  simulation.h  test_file.txt
apps/: main.cpp  main_modeI.cpp  main_modeII.cpp
include/: assembly.h  elements.h  inputhandling.h  linearsolver.h  mesh.h  modeI.h  modeII.h  postprocess.h  simulation.h
legacy/: Dcb2D-ModeI.cpp  Dcb2D-ModeI.h  Dcb2D-ModeII.h  README.md
matlab/: BVPSolverForGceff.m
src/: assembly.cpp  elements.cpp  linearsolver.cpp  mesh.cpp  postprocess.cpp
